--- a/sass/custom-text-one-line-blocks.scss
+++ b/sass/custom-text-one-line-blocks.scss
@@ -31,6 +31,10 @@
 }
 
 @media (max-width: $mobile-widths) {
+  .white-text-no-background {
+    width: 87%;
+    padding: 0px 20px;
+}
   .mission-studio {
     @include title-medium;
 }
