--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,7 @@
 @import "page-header.scss"; //стили для заглавной картинки
 @import "switch-lang.scss"; //стили для кнопок-переключателей языка
 @import "trailers.scss"; //стили для блока с видео с ютуба в index.html
-@import "vk-group-section.scss"; //стили для вк-виджета в index.html
+@import "vk-and-fb-group-section.scss"; //стили для вк-виджета и фб-виджета в index.html
 @import "white-block.scss"; //стили для белого блока (контентный блок-рамка для текста, фоток и прочего)
 @import "photo-three-line"; //стили для горизонтального блока-ряда из трех фоток
 @import "photo-popup.scss"; //стили для попапа для фоток
