--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,3 +18,4 @@
 @import "white-block.scss"; //стили для белого блока (контентный блок-рамка для текста, фоток и прочего)
 @import "photo-three-line"; //стили для горизонтального блока-ряда из трех фоток
 @import "photo-popup.scss"; //стили для попапа для фоток
+@import "vendors.scss"; //стили для вендоров
