--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -296,6 +296,10 @@
   .block-8 {
     width: 245px;
 }
+
+  .near-photo-text-1 {
+    padding: 0px 0px;
+}
 }
 
 @media (min-width: $tablet-widths) {
