--- a/sass/white-block.scss
+++ b/sass/white-block.scss
@@ -275,7 +275,6 @@
     margin: 0px 14.5px;
 }
 
-
   .fb-group .fb-page .fb_iframe_widget iframe {
     width: 245px;
 
@@ -289,6 +288,11 @@
     width: 245px;
     margin-left: 0px;
     margin-top: 0px;
+}
+
+  .twit-group_index-page {
+    width: 285px;
+    margin: 0px 14.5px;
 }
 
   .youtube-group {
@@ -398,6 +402,11 @@
     width: 300px;
 }
 
+  .twit-group_index-page {
+    width: 727px;
+    margin: 0px 17px;
+}
+
   .youtube-group {
     width: 300px;
 }
@@ -471,9 +480,13 @@
     margin: 0px 350px;
 }
 
-
   .twit-group {
     width: 500px;
+}
+
+  .twit-group_index-page {
+    width: 1160px;
+    margin: 0px 17px;
 }
 
   .youtube-group {
