--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -267,6 +267,11 @@
     margin-bottom: -5px;
 }
 
+  .features-3 .block-7 .near-photo-text-1 {
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
   .block-3 {
     margin-left: 0px;
 }
