--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -1,4 +1,7 @@
 .page-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
   position: relative;
   max-width: 100%;
   min-height: 283px;
