--- a/sass/switch-lang.scss
+++ b/sass/switch-lang.scss
@@ -1,3 +1,9 @@
+.switch-lang__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .switch-lang {
   float: right;
   text-decoration: none;
@@ -28,15 +34,11 @@
 }
 
 .eng-switch {
-  margin: 365px 25px 0px 0px;
   border-bottom: 8px solid white;
   border-right: 4px solid white;
 }
 
 .rus-switch {
-  position: relative;
-  margin: 260px 50px 0px 0px;
-  left: 170px;
   border-bottom: 8px solid white;
   border-right: 4px solid white;
 }
@@ -46,24 +48,26 @@
 }
 
 @media (max-width: $mobile-widths) {
+  .switch-lang__block {
+    width: 294px;
+    height: 70px;
+    margin: 0px 10px 10px 10px;
+    flex-direction: row;
+}
+
   .switch-lang {
     border-radius: 0px 0px;
 }
 
   .eng-switch {
-    margin: 210px 5px 0px 0px;
-    border-radius: 40px 5px;
-}
-
-  .rus-switch {
-    position: relative;
-    margin: 140px 40px 0px 0px;
-    left: -70px;
-    top: 70px;
     border-radius: 5px 40px;
     border-bottom: 8px solid white;
     border-left: 4px solid white;
     border-right: none;
+}
+
+  .rus-switch {
+    border-radius: 40px 5px;
 }
 
   .switch-lang p {
@@ -74,32 +78,24 @@
 }
 
 @media (min-width: $tablet-widths) {
-  .eng-switch {
-    margin: 330px 25px 0px 0px;
-}
-
-  .rus-switch {
-    position: relative;
-    margin: 240px 50px 0px 0px;
-    left: 155px;
+  .switch-lang__block {
+    width: 130px;
+    height: 180px;
+    margin: 0px 20px 20px 0px;
 }
 
   .switch-lang p {
     padding: 15px 30px;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 }
 
 @media (min-width: $desktop-widths) {
-  .eng-switch {
-    margin: 360px 30px 0px 0px;
-}
-
-  .rus-switch {
-    position: relative;
-    margin: 250px 50px 0px 0px;
-    left: 170px;
+  .switch-lang__block {
+    width: 140px;
+    height: 200px;
+    margin: 0px 25px 25px 0px;
 }
 
   .switch-lang p {
