--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -274,6 +274,7 @@
 
   .block-3 {
     margin-left: 0px;
+    height: initial;
 }
 
   .block-5 {
@@ -292,10 +293,12 @@
 
   .block-6 {
     margin-right: 0px;
+    height: initial;
 }
 
   .block-7 {
     margin-left: 0px;
+    height: initial;
 }
 
   .block-8 {
