--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -60,6 +60,8 @@
 }
 
 .sort-column-1-link {
+  display: flex;
+  align-items: center;
   float: left;
   width: 105px;
   height: 65px;
@@ -258,7 +260,7 @@
 
   .features-2 {
     flex-direction: column-reverse;
-    margin-top: -12px;
+    margin-top: 0px;
     margin-bottom: 30px;
 }
 
@@ -284,6 +286,10 @@
     flex-direction: column;
 }
 
+  .block-5-2 {
+    margin-top: 15px;
+}
+
   .block-5-3,
   .block-5-4,
   .block-5-5,
@@ -306,7 +312,7 @@
 }
 
   .near-photo-text-1 {
-    padding: 0px 0px;
+    padding: 0px 10px;
 }
 }
 
