--- a/sass/page.scss
+++ b/sass/page.scss
@@ -1,7 +1,24 @@
 .page {
   background-color: #00472E;
-  background-image: url("../img/nature.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+}
+
+@media (max-width: $mobile-widths) {
+  .page {
+    background-image: url("../img/nature-mobile@1x.jpg");
+}
+}
+
+@media (min-width: $tablet-widths) {
+  .page {
+    background-image: url("../img/nature-tablet@1x.jpg");
+}
+}
+
+@media (min-width: $desktop-widths) {
+  .page {
+    background-image: url("../img/nature-desktop@1x.jpg");
+}
 }
