--- a/sass/page.scss
+++ b/sass/page.scss
@@ -5,3 +5,27 @@
   background-size: cover;
   background-attachment: fixed;
 }
+
+@media (max-width: $mobile-widths) {
+.page {
+  background-image: url("../img/nature-mobile@1x.jpg");
+}
+}
+
+@media (min-width: 321px) and (max-width: 767px){
+.page {
+  background-image: url("../img/nature-tablet@1x.jpg");
+}
+}
+
+@media (min-width: $tablet-widths) {
+.page {
+  background-image: url("../img/nature-tablet@1x.jpg");
+}
+}
+
+@media (min-width: $desktop-widths) {
+.page {
+  background-image: url("../img/nature-desktop@1x.jpg");
+}
+}
