--- a/sass/container-page.scss
+++ b/sass/container-page.scss
@@ -15,7 +15,8 @@
 
 @media (max-width: $mobile-widths) {
   .container-page {
-    width: 320px;
+    width: 318px;
+    border: 1px solid black;
 }
 }
 
