--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -16,6 +16,9 @@
 }
 
 @media (max-width: $mobile-widths) {
+  .page-header {
+    border: 1px solid black;
+}
   .page-header__index {
     background-image: url("../img/header-index-mobile@1x.jpg");
 }
