--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -2,11 +2,10 @@
 
 .main-footer-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   width: 1200px;
-  height: 120px;
   margin: auto;
   background: #0F25AE;
   opacity: 0.9;
@@ -18,6 +17,14 @@
   border-radius: 1px 1px 40px 40px;
 }
 
+.main-footer-page__main-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 30px;
+}
+
 /*ВИЗИТ СЕДОНА*/
 
 .footer-visit {
@@ -25,11 +32,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .footer-visit h2 {
   margin: 0px;
   color: white;
+  letter-spacing: 0.5px;
 }
 
 /*СОЦИАЛЬНЫЕ КНОПКИ*/
@@ -138,11 +147,24 @@
   margin: 6px 0px 0px 32px;
 }
 
+.site-date {
+  width: 100%;
+  text-align: center;
+  color: white;
+  margin-top: 5px;
+}
+
 @media (max-width: $mobile-widths) {
+  .main-footer-page__main-block {
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+    margin-top: 0px;
+}
+
   .main-footer-page {
     width: 318px;
     flex-direction: column;
-    height: 200px;
     margin-bottom: 5px;
     border: 1px solid black;
 }
@@ -153,6 +175,10 @@
 
   .footer-visit {
     margin-top: 15px;
+}
+
+  .site-date {
+    margin-top: -5px;
 }
 }
 
